--- a/index.html
+++ b/index.html
@@ -1,16 +1,28 @@
 
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Mr. Khokhar Quest - Battle Edition</title>
-    <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js"></script>
-    <style>
-      body { margin: 0; padding: 0; }
-      canvas { display: block; margin: auto; background: #000; }
-    </style>
-  </head>
-  <body>
-    <script src="game.js"></script>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Mr. Khokhar Quest</title>
+  <style>
+    body {
+      margin: 0;
+      background: #222;
+      color: white;
+      font-family: Arial, sans-serif;
+      overflow: hidden;
+    }
+    canvas {
+      display: block;
+      margin: 0 auto;
+      border: 3px solid #00bfff;
+      box-shadow: 0 0 20px #00bfff;
+    }
+  </style>
+</head>
+<body>
+  <script src="https://cdn.jsdelivr.net/npm/phaser@3.60.0/dist/phaser.js"></script>
+  <script src="game.js"></script>
+</body>
 </html>
