--- a/index.html
+++ b/index.html
@@ -6,19 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Mr. Khokhar Quest</title>
   <style>
-    body {
-      margin: 0;
-      background: #222;
-      color: white;
-      font-family: Arial, sans-serif;
-      overflow: hidden;
-    }
-    canvas {
-      display: block;
-      margin: 0 auto;
-      border: 3px solid #00bfff;
-      box-shadow: 0 0 20px #00bfff;
-    }
+    body { margin: 0; background: #222; overflow: hidden; }
+    canvas { display: block; margin: 0 auto; border: 3px solid #009900; }
   </style>
 </head>
 <body>
