--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,8 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Mr. Khokhar Quest</title>
   <style>
-    body { margin: 0; background: #222; overflow: hidden; }
-    canvas { display: block; margin: 0 auto; border: 3px solid #009900; }
+    body {
+      margin: 0;
+      background: #2ecc71; /* green background */
+      font-family: 'Arial', sans-serif;
+      overflow: hidden;
+    }
+    canvas {
+      display: block;
+      margin: 0 auto;
+      border: 4px solid #2c3e50;
+      box-shadow: 0 0 20px #2c3e50;
+    }
   </style>
 </head>
 <body>
