--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <style>
     body {
       margin: 0;
-      background: #2ecc71; /* green background */
-      font-family: 'Arial', sans-serif;
+      background: #2ecc71;
+      font-family: Arial, sans-serif;
       overflow: hidden;
     }
     canvas {
       display: block;
       margin: 0 auto;
-      border: 4px solid #2c3e50;
+      border: 4px solid #27ae60;
       box-shadow: 0 0 20px #2c3e50;
     }
   </style>
